--- a/chart-pie.html
+++ b/chart-pie.html
@@ -19,34 +19,71 @@ They are also registered under two aliases in the Chart core. Other than their d
 @status alpha
 @homepage http://robdodson.github.io/chart-elements
 -->
-<polymer-element name="chart-pie" attributes="width height values colors options">
-  <template>
-    <style>
+<dom-module id="chart-pie">
+  <style>
     :host {
       display: inline-block;
     }
     </style>
+  <template>
     <canvas id="canvas" width="{{width}}" height="{{height}}"></canvas>
   </template>
   <script>
     Polymer({
-      values: [30, 50, 100, 40, 120],
-      colors: ["#F7464A", "#46BFBD", "#FDB45C", "#949FB1", "#4D5360"],
-      options: {},
-      observe: {
-        width: 'resize',
-        height: 'resize',
-        colors: 'updateChart',
-        values: 'updateChart',
-        options: 'updateChart'
+      is: 'chart-pie',
+      properties: {
+        colors: {
+          type: Array,
+          value: function () {
+            return [
+              '#F7464A',
+              '#46BFBD',
+              '#FDB45C',
+              '#949FB1',
+              '#4D5360'
+            ];
+          },
+          notify: true,
+          observer: 'updateChart'
+        },
+        height: {
+          notify: true,
+          observer: 'resize'
+        },
+        options: {
+          type: Object,
+          value: function () {
+            return {};
+          },
+          notify: true,
+          observer: 'updateChart'
+        },
+        values: {
+          type: Array,
+          value: function () {
+            return [
+              30,
+              50,
+              100,
+              40,
+              120
+            ];
+          },
+          notify: true,
+          observer: 'updateChart'
+        },
+        width: {
+          notify: true,
+          observer: 'resize'
+        }
       },
-      resize: function() {
+      resize: function () {
         if (this.chart) {
           this.updateChart();
         }
       },
       updateChart: function () {
-        this.async(function() {
+        this.async(function () {
           if (this.chart) {
             this.chart.destroy();
             // Bindings don't seem to be taking effect properly so
@@ -56,13 +93,15 @@ They are also registered under two aliases in the Chart core. Other than their d
           }
           this.data = [];
           this.values.forEach(function (val, i) {
-            this.data.push({ color: this.colors[i], value: val });
+            this.data.push({
+              color: this.colors[i],
+              value: val
+            });
           }, this);
-
           this.ctx = this.$.canvas.getContext('2d');
           this.chart = new Chart(this.ctx).Pie(this.data, this.options);
         }, null, 0);
       }
     });
   </script>
-</polymer-element>
+</dom-module>
