--- a/index.html
+++ b/index.html
@@ -1,25 +1,20 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-<head>
-  <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
-  <script src="../webcomponentsjs/webcomponents.js"></script>
-  <link rel="import" href="../polymer/polymer.html">
-  <link rel="import" href="../core-component-page/core-component-page.html">
-
-</head>
-<body unresolved>
-
-  <core-component-page
-    moduleName="chart-elements"
-    sources='[
-      "chart-bar.html",
-      "chart-doughnut.html",
-      "chart-line.html",
-      "chart-pie.html",
-      "chart-polar-area.html",
-      "chart-radar.html"
-    ]'>
-  </core-component-page>
-
-</body>
+  <head>
+    <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
+    <script src="../webcomponentsjs/webcomponents-lite.js"></script>
+    <link rel="import" href="../polymer/polymer.html">
+    <link rel="import" href="../iron-component-page/iron-component-page.html">
+  </head>
+  <body unresolved="">
+    <iron-component-page modulename="chart-elements" src="[
+        &quot;chart-bar.html&quot;,
+        &quot;chart-doughnut.html&quot;,
+        &quot;chart-line.html&quot;,
+        &quot;chart-pie.html&quot;,
+        &quot;chart-polar-area.html&quot;,
+        &quot;chart-radar.html&quot;
+      ]">
+    </iron-component-page>
+  </body>
 </html>
